--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
+cachetools==4.2.2
+certifi==2020.12.5
+chardet==3.0.4
+Cython==0.29.23
+google-auth==1.30.0
+idna==2.10
 kubernetes==12.0.0
+oauthlib==3.1.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+python-dateutil==2.8.1
+PyYAML==5.4.1
 requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+setuptools-scm==6.0.1
+six==1.16.0
+urllib3==1.25.11
+websocket-client==1.0.0
+wheel==0.36.2
+setuptools==56.2.0
